Fix for https://bugs.webkit.org/show_bug.cgi?id=31286 fast/js/date-proto-generic-invocation breaks another test

Reviewed by Geoffrey Garen.

Don't cache JSClassRefs, a change to the prototype chain will
last between tests.

* DumpRenderTree/AccessibilityController.cpp:
(AccessibilityController::getJSClass):
* DumpRenderTree/GCController.cpp:
(GCController::getJSClass):
* DumpRenderTree/GCController.h:
* DumpRenderTree/LayoutTestController.cpp:
(LayoutTestController::getJSClass):



Canonical link: https://commits.webkit.org/42950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51523 268f45cc-cd09-0410-ab3c-d52691b4dbfc