WebKitTools/DumpRenderTree/GCController.cpp
@@ -80,23 +80,6 @@ void GCController::makeWindowObject(JSContextRef context, JSObjectRef windowObje
 
 JSClassRef GCController::getJSClass()
 {
-    static JSClassRef gcControllerClass = 0;
-
-    if (!gcControllerClass) {
-        JSStaticFunction* staticFunctions = GCController::staticFunctions();
-        JSClassDefinition classDefinition = {
-            0, kJSClassAttributeNone, "GCController", 0, 0, staticFunctions,
-            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-        };
-
-        gcControllerClass = JSClassCreate(&classDefinition);
-    }
-
-    return gcControllerClass;
-}
-
-JSStaticFunction* GCController::staticFunctions()
-{
     static JSStaticFunction staticFunctions[] = {
         { "collect", collectCallback, kJSPropertyAttributeReadOnly | kJSPropertyAttributeDontDelete },
         { "collectOnAlternateThread", collectOnAlternateThreadCallback, kJSPropertyAttributeReadOnly | kJSPropertyAttributeDontDelete },
@@ -104,5 +87,10 @@ JSStaticFunction* GCController::staticFunctions()
         { 0, 0, 0 }
     };
 
-    return staticFunctions;
+    static JSClassDefinition classDefinition = {
+        0, kJSClassAttributeNone, "GCController", 0, 0, staticFunctions,
+        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+    };
+
+    return JSClassCreate(&classDefinition);
 }
