WebKitTools/DumpRenderTree/GCController.h
@@ -45,7 +45,6 @@ public:
 
 private:
     static JSClassRef getJSClass();
-    static JSStaticFunction* staticFunctions();
 };
 
 #endif // GCController_h
